chore: add ingress

--- a/apps/guestbook/guestbook-ui-ingress-alb.yaml
+++ b/apps/guestbook/guestbook-ui-ingress-alb.yaml
@@ -9,7 +9,7 @@ metadata:
     alb.ingress.kubernetes.io/ssl-redirect: "443"
     alb.ingress.kubernetes.io/tags: "Environment=hub,GitOps=true"
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/security-groups: { { SECURITY_GROUP_ID } }
+    # alb.ingress.kubernetes.io/security-groups: { { SECURITY_GROUP_ID } }
     alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
 spec:
   ingressClassName: alb
