fix: disable ssl

--- a/apps/guestbook/guestbook-ui-ingress-alb.yaml
+++ b/apps/guestbook/guestbook-ui-ingress-alb.yaml
@@ -4,9 +4,9 @@ metadata:
   name: guestbook-ui
   annotations:
     alb.ingress.kubernetes.io/backend-protocol: HTTP
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/ssl-redirect: "443"
+    # alb.ingress.kubernetes.io/ssl-redirect: "443"
     alb.ingress.kubernetes.io/tags: "Environment=hub,GitOps=true"
     alb.ingress.kubernetes.io/target-type: ip
     # alb.ingress.kubernetes.io/security-groups: { { SECURITY_GROUP_ID } }
