--- a/environments/dev/addons/argo-cd/values.yaml
+++ b/environments/dev/addons/argo-cd/values.yaml
@@ -31,12 +31,9 @@ server:
     annotations:
       alb.ingress.kubernetes.io/scheme: "internet-facing"
       alb.ingress.kubernetes.io/target-type: "ip"
-      alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
-      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
       alb.ingress.kubernetes.io/healthcheck-path: /healthz
-      alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
       alb.ingress.kubernetes.io/tags: "Environment=hub,GitOps=true"
-      alb.ingress.kubernetes.io/ssl-redirect: "443"
       # alb.ingress.kubernetes.io/security-groups: { { SECURITY_GROUP_ID } }
       alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
     ingressClassName: "alb"
